--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7154,7 +7154,7 @@ width: 100%;
   background: #f2f2f2; ;
   padding: 24px 19px;
   padding-top: 3px;
-  margin-top: 5%;
+  /*margin-top: 5%;*/
   font-family: Roboto Condensed !important;
   margin-bottom: 5%;
   }
